[project]
name = "gfpgan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "facexlib>=0.3.0",
    "lmdb>=1.6.2",
    "numpy>=2.2.5",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "yapf>=0.43.0",
]
